PR/53916: Rob Gill: remove redundant assignment to matchlen.